--- a/index.html
+++ b/index.html
@@ -685,43 +685,43 @@
     <div class="gift-grid">
       <div class="gift-item">
         <div class="gift-icon" id="giftHeart"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftBear"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftGift"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftRose"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftCake"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftRoseBouquet"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftRing"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftTrophy"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftDiamond"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram Gift</div>
       </div>
       <div class="gift-item">
         <div class="gift-icon" id="giftCalendar"></div>
-        <div class="gift-label">Telegram Premium</div>
+        <div class="gift-label">Telegram NFT</div>
       </div>
     </div>
   </div>
